--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && rm -rf /Users/wuji/home/danmuku/* && cp -r ./dist/* /Users/wuji/home/danmuku",
+    "build": "tsc && vite build && node ./build/upload",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.60.0",
-    "sass-loader": "^13.2.1"
+    "sass-loader": "^13.2.1",
+    "webdav": "^4.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
